# bl2

./: .gitignore  Cargo.toml  README.md  anti_debug.txt  global_names.txt  global_objects.txt
bl2_core/: Cargo.toml
bl2_core/src/: array.rs  globals.rs  lib.rs  object.rs  pattern.rs  pattern_finder.rs  tarray.rs  winapi_helpers.rs
bl2_core/src/game/: array.rs  array_property.rs  bool_property.rs  byte_property.rs  class.rs  class_property.rs  const.rs  delegate_property.rs  enum.rs  field.rs  fstring.rs  function.rs  interface_property.rs  map_property.rs  mod.rs  object.rs  object_property.rs  property.rs  script_interface.rs  script_struct.rs  struct.rs  struct_property.rs
bl2_core/src/game/name/: entry.rs  mod.rs
bl2_core/src/name/: entry.rs  mod.rs  name.rs
bl2_macros/: Cargo.toml
bl2_macros/src/: lib.rs
bl2_sdk_gen/: Cargo.toml
bl2_sdk_gen/src/: config.rs  lib.rs  static_classes.rs
bl2_sdk_gen/src/staging/: class.rs  const.rs  constant.rs  enum.rs  enumeration.rs  mod.rs
bl2_sdk_gen/src/staging/package/: mod.rs  subpackage.rs
src/: lib.rs
