[package]
name = "bl2"
version = "0.1.0"
authors = ["rkr35 <rkr35@drexel.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
bl2_macros = { path = "bl2_macros" }
winapi = { version = "0.3", features = [
    "consoleapi",
    "minwindef",
    "libloaderapi",
    "processthreadsapi",
    "wincon",
    "winnt",
]}